# control

./: .gitignore  test_motor.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/control_package/share/control_package/: package.zsh
log/: latest_build
src/control_package/: CMakeLists.txt  control_hardware.xml  package.xml
src/control_package/config/: controllers.yaml
src/control_package/include/control_package/: pi_comms.h  pi_system.hpp
src/control_package/launch/: robot.launch.py
src/control_package/src/: pi_comms.cpp  pi_system.cpp  test_motor.cpp
src/control_package/src/include/control_package/: pi_comms.h  pi_system.h
src/control_package/urdf/: robot.urdf.xacro
